--- a/ModernVPN/ModernVPN/App.xaml
+++ b/ModernVPN/ModernVPN/App.xaml
@@ -1,9 +1,30 @@
 ﻿<Application x:Class="ModernVPN.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ModernVPN"
-             StartupUri="MainWindow.xaml">
+             xmlns:view="clr-namespace:ModernVPN.MVVM.View"
+             xmlns:viewModel="clr-namespace:ModernVPN.MVVM.ViewModel"
+             StartupUri="MVVM/View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!--  Themes  -->
+                <ResourceDictionary Source="pack://application:,,,/Themes/TitlebarButton.Nord.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Themes/MenuButton.Nord.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Themes/ConnectButton.Nord.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Themes/ServerList.Nord.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:MainViewModel}">
+                <view:MainWindow/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+                <view:SettingsView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ProtectionViewModel}">
+                <view:ProtectionView/>
+            </DataTemplate>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
